Added restart game feature and visual aids

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 body {
     text-align: center;
     font-family: "Helvetica";
+    margin: 10px auto;
+    background-image: url("./background.jpg");
 }
 
 .block {
@@ -14,19 +16,63 @@ body {
     padding: 0;
     text-align: center;
     float: left;
-  }
+    cursor: pointer;
+}
+
+.block:hover {
+    background: lightgray;
+}
 
 #board {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin: 20px;
 }
 
 .row:after {
     clear: both;
-    display: table;
 }
 
 .row {
     margin: 0 auto;
+}
+
+#gameStatus {
+    margin: 20px;
+}
+
+#gameRestartOverlay {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-repeat: no-repeat;
+    background-size: auto;
+    background-position: top;
+}
+
+#restartButton {
+    width: 200px;
+    font-size: 30px;
+    cursor: pointer;
+}
+
+#winnerStatus {
+    font-size: 30px;
+    margin: 10px;
+}
+
+div.players div {
+    margin: 5px;
+    padding: 5px;
 }
