Modified draw logic - fixed bug

--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,10 @@ body {
     background: lightgray;
 }
 
+.block:focus {
+    outline: none;
+}
+
 #board {
     display: flex;
     flex-direction: column;
